[package]
name = "pop-launcher-stackoverflow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pop-launcher-toolkit = { git = "https://github.com/pop-os/launcher" }
tokio = { version = "1.18.2", features = ["rt"] }
ureq = { version = "2.4.0", features = ["json"] }
serde = { version = "^1", features = ["derive"] }
anyhow = "^1"
htmlescape = "0.3.1 "
ron = "0.7.0"

[dev-dependencies]
tokio-test = "0.4.2"
speculoos = "0.9.0"
